Moves base imports into single file
This makes Sassline more usable as a library instead of just a standalone project.

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -1,13 +1,8 @@
 /* CSS compiled from SCSS */
 /* --------------------------------------- */
 
-// Import Sassline base SCSS files in order so variables are read correctly.
-@import "base/reset";
-@import "base/variables";
-@import "base/modular-scale";
-@import "base/mixins";
-@import "base/typography";
-@import "base/layouts";
+// Import Sassline base.
+@import "base";
 
 // Import all SCSS modules with Sass globbing.
 @import "modules/*.*";
