--- a/assets/sass/modules/_globals.scss
+++ b/assets/sass/modules/_globals.scss
@@ -1,4 +1,4 @@
-// Global demo styles
+// Global demo styles.
 // ---------------------------------------
 
 body {
@@ -21,7 +21,6 @@ body {
 
 img {
   -ms-interpolation-mode: bicubic;
-
   height: auto;
   vertical-align: middle;
   width: 100%;
