--- a/assets/sass/modules/_nav.scss
+++ b/assets/sass/modules/_nav.scss
@@ -1,4 +1,4 @@
-// Navigation demo styles
+// Navigation demo styles.
 // ---------------------------------------
 
 // responsive-nav.js styles.
@@ -40,7 +40,7 @@
 }
 
 .disable-pointer-events {
-  pointer-events: none !important;
+  pointer-events: none;
 }
 
 .nav-toggle {
