--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -1,18 +1,12 @@
-/* CSS compiled from SCSS */
+/* CSS compiled from SCSS. */
 /* --------------------------------------- */
 
 // Import Sassline base.
-@import "base";
+@import "sassline-base";
 
-// Import all SCSS modules with Sass globbing.
-@import "modules/*.*";
-
-// Demo baseline grid styles.
-#baseline.show-grid {
-  background-image: -webkit-linear-gradient(top, cyan 0, rgba(255,255,255,0) 1px);
-  background-image: -moz-linear-gradient(top, cyan 0, rgba(255,255,255,0) 1px);
-  background-image: -o-linear-gradient(top, cyan 0, rgba(255,255,255,0) 1px);
-  background-image: linear-gradient(to bottom, cyan 0, rgba(255,255,255,0) 1px);
-  background-repeat: repeat-y;
-  background-size: 100% 1rem;
-}
+// Import your project SCSS module partials.
+@import "modules/globals";
+@import "modules/nav";
+@import "modules/header";
+@import "modules/footer";
+@import "modules/show-grid";
